[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sisbom-cli"
version = "0.1.0"
description = "CLI Python para interagir com o SISBOM (CBMRN) via GraphQL"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13",
]

[project.scripts]
sisbom = "sisbom_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["sisbom_cli*"]
